--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Explore the portfolio of Sity Aisyah, a web developer specializing in React. Discover my projects, skills, and experience in web development."
+      content="Pipto Coin: A satirical token that embraces life’s inevitable falls both literal and metaphorical. Instead of despair, we choose laughter and community, helping each other rise after every stumble. Life’s too short not to laugh at the fall."
     />
     <meta
       name="keywords"
-      content="Sity Aisyah, portfolio, React developer, web development projects, frontend developer, JavaScript, TypeScript, HTML, CSS, Three.js, React Portfolio, Web Developer Portfolio, Sity Aisyah Portfolio"
+      content="Pipto Coin, Satirical token, Life's falls, Embracing imperfection, Resilience and humor, Community support, Decentralized laughter, Rising together, Human connection, Inevitable stumbles, Laugh at the fall"
     />
-    <meta name="author" content="Sity Aisyah" />
-    <meta name="title" content="Sity Aisyah - Portfolio" />
-    <meta name="image" content="./memoji.ico" />
-    <link rel="icon" href="./memoji.ico" />
+    <meta name="author" content="Team PiptoCoin" />
+    <meta name="title" content="PiptoCoin - PIP - Cryptocurrency" />
+    <meta name="image" content="./favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <link rel="canonical" href="#" />
     <script
       defer
@@ -22,7 +22,7 @@
     ></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sity Aisyah - Portfolio</title>
+    <title>PiptoCoin - PIP - Cryptocurrency</title>
   </head>
   <body>
     <div id="root"></div>
